--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
   max-width: var(--max-width);
   margin: auto;
   padding: 5rem 1rem;
+  overflow: hidden;
 }
 
 .section__header {
@@ -75,12 +76,14 @@ header {
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
+  margin-bottom: 1rem;
 }
 nav {
   position: fixed;
   width: 100%;
   max-width: var(--max-width);
   margin-inline: auto;
+  z-index: 1;
 }
 
 .nav__header {
@@ -159,6 +162,9 @@ nav {
     opacity: 1;
   }
 }
+.header__content {
+  max-height: 18rem;
+}
 
 .header__content h2 {
   max-width: 400px;
@@ -210,6 +216,262 @@ nav {
 .header__content span {
   font-size: 1ch;
 }
+/* //banner  */
+
+.banner__container {
+  display: grid;
+  gap: 1rem;
+  grid-auto-rows: 200px;
+}
+.banner__card {
+  padding: 1rem;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 1rem;
+}
+
+.banner__card p {
+  margin-bottom: 1.5rem;
+  font-size: 2rem;
+  font-weight: 600;
+  color: var(--white);
+}
+.banner__card h4 {
+  font-size: 2rem;
+  font-weight: 600;
+  color: var(--white);
+}
+
+.banner__card:nth-child(1) {
+  background-image: url(assets/banner-1.png);
+}
+.banner__card:nth-child(2) {
+  background-image: url(assets/banner-2.png);
+}
+.banner__card:nth-child(3) {
+  background-image: url(assets/banner-3.png);
+}
+
+.order__container h3 {
+  max-width: fit-content;
+  margin-inline: auto;
+  margin-bottom: 1rem;
+  padding: 0.5rem 2rem;
+  font-size: 1.5rem;
+  font-weight: 400;
+  font-family: var(--header-font2);
+  color: var(--primary--color);
+  background-color: var(--secondary--color);
+}
+
+.order__container .section__header {
+  margin-bottom: 1rem;
+}
+.order__container .section__description {
+  margin-bottom: 2rem;
+  text-align: center;
+}
+
+.order__grid {
+  display: grid;
+  gap: 2rem 1rem;
+}
+
+.order__Card {
+  padding: 2rem 1rem;
+  border-radius: 1rem;
+  text-align: center;
+  transition: 0.3s;
+  opacity: 0;
+
+  filter: blur(10px);
+  transform: translateX(-100%);
+}
+.order__Card:nth-child(1) {
+  animation-delay: 200ms;
+}
+.order__Card:nth-child(2) {
+  animation-delay: 300ms;
+}
+.order__Card:nth-child(3) {
+  animation-delay: 400ms;
+}
+.animate {
+  animation: animate 0.5s forwards;
+}
+
+@keyframes animate {
+  100% {
+    transform: translateX(0%);
+    filter: blur(0px);
+    opacity: 1;
+    scale: 1;
+  }
+}
+
+.order__Card:hover {
+  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+}
+
+.order__Card img {
+  max-width: 250px;
+  margin-inline: auto;
+  margin-bottom: 2rem;
+  filter: drop-shadow(10px 10px 30px rgba(0, 0, 0, 0.4));
+}
+.order__Card h4 {
+  margin-bottom: 1rem;
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: var(--text-dark);
+}
+.order__Card p {
+  margin-bottom: 2rem;
+  font-weight: 500;
+  color: var(--text-dark);
+  line-height: 1.75rem;
+}
+
+.event__content {
+  display: grid;
+  margin-inline: auto;
+  gap: 2rem;
+  padding: 1rem;
+  box-shadow: 5px 5px 20px rgba(0.2);
+  opacity: 0.4;
+  scale: 0.8;
+}
+.event__content img {
+  width: 100%;
+}
+.event__detail {
+  text-align: center;
+}
+
+.event__detail h3 {
+  font-size: 2rem;
+  font-weight: 500;
+  font-family: var(--header-font2);
+  color: var(--text-dark);
+}
+.event__details .section__header {
+  margin-bottom: 1rem;
+}
+.event__detail p {
+  margin-bottom: 1rem;
+}
+.event__image {
+  margin-inline: auto;
+  display: grid;
+  justify-content: center;
+  transition: 0.3s;
+  opacity: 0;
+  transition-duration: 1s;
+}
+
+.reservation {
+  position: relative;
+  isolation: isolate;
+  margin-bottom: 2rem;
+}
+
+.reservetion__container h3 {
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 600;
+  font-family: var(--header-font2);
+  color: var(--text-dark);
+}
+.reservetion__container form {
+  max-width: 400px;
+  margin-inline: auto;
+  margin-top: 4rem;
+  display: grid;
+  gap: 1rem;
+}
+
+.reservetion__container input {
+  padding: 0.75rem 1rem;
+  outline: none;
+  border: 1px solid var(--text-dark);
+  font-size: 1rem;
+  color: var(--text-dark);
+}
+.reservetion__container input::placeholder {
+  color: var(--text-dark);
+}
+.reservation img {
+  display: none;
+}
+
+.footer {
+  background-image: url(assets/footer-bg.png);
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.footer img {
+  max-width: 250px;
+}
+.footer__content {
+  margin-top: 2rem;
+  display: grid;
+  gap: 2rem;
+}
+
+.footer__content p {
+  color: var(--white);
+  font-weight: 5500;
+  line-height: 1.75rem;
+}
+.footer__links {
+  list-style: none;
+  display: grid;
+  gap: 1rem;
+}
+.footer__links li {
+  font-size: 1.25rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  color: var(--white);
+  font-weight: 500px;
+}
+
+.footer__social {
+  margin-top: 2rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.footer__social a {
+  color: var(--white);
+  font-size: 1.5rem;
+}
+.footer__social a:hover {
+  color: var(--secondary--color);
+}
+
+.footer__bar {
+  padding: 1rem;
+  font-size: 0.9rem;
+  color: var(--white);
+  text-align: center;
+}
+
+@media screen and (width > 840px) {
+  .banner__container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .banner__card:nth-child(1) {
+    grid-area: 1/1/2/3;
+  }
+  .order__grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
 
 @media only screen and (width > 1050px) {
   nav {
@@ -240,7 +502,7 @@ nav {
     position: static;
     padding: 0;
     flex-direction: row;
-    z-index: 1;
+    z-index: 1000;
     background-color: transparent;
     justify-content: flex-end;
     transform: none;
@@ -272,5 +534,54 @@ nav {
   }
   .header__content h1 {
     text-align: left;
+  }
+
+  .banner__card:nth-child(1) {
+    grid-area: 1/1/3/2;
+  }
+  .order__grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .event__content {
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+  }
+  .event__image {
+    grid-area: 1/2/2/3;
+  }
+
+  .event__detail,
+  .event__detail .section__header {
+    text-align: left;
+  }
+
+  .reservetion__container form {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .reservation img {
+    display: flex;
+    position: absolute;
+    z-index: -1;
+  }
+
+  .reservation-bg-1 {
+    left: 0;
+    top: 0;
+    width: clamp(100px, 30vh, 500px);
+  }
+  .reservation-bg-2 {
+    right: 0;
+    bottom: 0;
+    width: clamp(100px, 20vh, 200px);
+  }
+  .footer__content {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .footer__links li {
+    justify-content: flex-end;
+  }
+  .footer__social {
+    justify-content: flex-end;
   }
 }
